Add loader auto update and change java version to Java 1.8